<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.edu.gdmec.s07150808.test2.Main5Activity">

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:max="100"
        android:progress="50"
        android:secondaryProgress="60"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/add"
        android:layout_below="@+id/progressBar"
        android:layout_toRightOf="@+id/reset"
        android:layout_toEndOf="@+id/reset" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reduce"
        android:id="@+id/reduce"
        android:layout_alignTop="@+id/reset"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/reset"
        android:layout_alignTop="@+id/add"
        android:layout_toRightOf="@+id/reduce"
        android:layout_toEndOf="@+id/reduce" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/time"
        android:id="@+id/textView"
        android:layout_below="@+id/add"
        android:layout_toRightOf="@+id/reduce"
        android:layout_toEndOf="@+id/reduce"
        android:layout_marginTop="97dp" />
</RelativeLayout>
